--- a/src/components/About.css
+++ b/src/components/About.css
@@ -37,7 +37,14 @@
 @media screen and (max-width: 1300px) {
   .about .container {
     grid-template-columns: 1fr;
-    width: 80%;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .about .photo-box {
+    width: 100%;
+    display: flex;
     justify-content: center;
     align-items: center;
   }
