--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -7,6 +7,18 @@
   align-items: center;
   justify-content: center;
   display: flex;
+  position: relative;
+}
+
+.header::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(245, 245, 245, 0.6);
+  z-index: 1;
 }
 
 .header-container {
@@ -15,6 +27,19 @@
   align-items: center;
   width: 60vw;
   gap: 2rem;
+  position: relative;
+  z-index: 2;
+  /* margin: 0 auto; */
+}
+
+.LinkBar {
+  position: fixed;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 1000;
+  display: flex;
+  align-items: center;
 }
 
 .header-container h1 {
@@ -26,4 +51,27 @@
 .header-container p {
   text-align: center;
   font-size: 1.3rem;
+}
+
+@media only screen and (max-width: 768px) {
+  .header {
+    width: 80vw;
+  }
+
+  .header-container {
+    width: 80vw;
+  }
+
+  .header-container h1 {
+    font-size: 3rem;
+  }
+
+  .LinkBar {
+    position: static;
+    transform: none;
+    margin-top: 2rem;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
 }
