--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,3 +1,11 @@
+html,
+body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  overflow-x: hidden;
+}
+
 .header {
   background-image: url("../images/subtle-prism.png");
   background-color: #f5f5f5;
@@ -19,6 +27,7 @@
   height: 100%;
   background-color: rgba(245, 245, 245, 0.6);
   z-index: 1;
+  /* outline: 1px solid red; */
 }
 
 .header-container {
@@ -39,7 +48,6 @@
   z-index: 1000;
   display: flex;
   align-items: center;
-  /* outline: 1px solid red; */
 }
 
 .header-container h1 {
