--- a/src/components/utils/LinkNavBar.css
+++ b/src/components/utils/LinkNavBar.css
@@ -9,6 +9,11 @@
   border-top-right-radius: 2px;
   border-bottom-right-radius: 2px;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  align-items: center;
+}
+
+.linkbar-container a {
+  color: black;
 }
 
 @media only screen and (max-width: 768px) {
