--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -41,3 +41,43 @@
   text-decoration-color: black;
   text-decoration-thickness: 2px;
 }
+
+/* Hamburger menu */
+.hamburger {
+  display: none;
+  cursor: pointer;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.hamburger .bar {
+  width: 25px;
+  height: 3px;
+  background-color: black;
+  border-radius: 5px;
+}
+
+@media (max-width: 768px) {
+  .navbar-container .nav-links {
+    display: none;
+    flex-direction: column;
+    gap: 2rem;
+    position: absolute;
+    top: 4.9rem;
+    left: 0;
+    width: 100%;
+    text-align: center;
+    background-color: white;
+    padding: 1rem;
+    box-shadow: 0 10px 50px rgba(0, 0, 0, 0.1);
+    /* z-index: 3; */
+  }
+
+  .navbar-container .nav-links.active {
+    display: flex;
+  }
+
+  .hamburger {
+    display: flex;
+  }
+}
