--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -17,6 +17,9 @@
   margin-right: 1rem;
   align-items: center;
   height: 10vh;
+  font-size: 1rem;
+  font-weight: 550;
+  text-transform: uppercase;
 }
 
 .navbar-container .logo {
