--- a/src/components/utils/projects/ProjectContainer.css
+++ b/src/components/utils/projects/ProjectContainer.css
@@ -39,7 +39,7 @@
 }
 
 .projectcontainer-container .image p {
-  background-color: #7843e8;
+  /* background-color: #7843e8; */
   width: 100%;
   height: 50vh;
   /* this is temp until I get to coding the image */
@@ -49,6 +49,14 @@
   display: flex;
   flex-direction: column;
   width: 50%;
+}
+
+.project-details .text {
+  margin-bottom: 2rem;
+}
+
+.project-details .text h4 {
+  margin-bottom: 0.5rem;
 }
 
 .projectcontainer .icons {
@@ -63,11 +71,14 @@
   color: black;
 }
 
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 1100px) {
   .projectcontainer-container {
     flex-direction: column;
     justify-content: center;
     gap: 0.5rem;
+    width: 100%;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
   }
   .projectcontainer-container .image {
     width: 100%;
@@ -75,7 +86,10 @@
 
   .projectcontainer-container .project-details {
     width: 100%;
-    align-items: center;
     gap: 1rem;
+  }
+
+  .project-details .text {
+    margin-bottom: 0.7rem;
   }
 }
