styling for experience comploete

--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -2,7 +2,34 @@
   width: 100%;
   background-color: #f8f8f8;
   padding-top: 2rem;
-  padding-bottom: 5rem;
+  background-image: url("../images/subtle-prism.png");
+  background-size: cover;
+  position: relative;
+}
+
+.projects::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(245, 245, 245, 0.6);
+  z-index: 1;
+}
+
+.experience {
+  width: 100%;
+  background-color: #f8f8f8;
+  padding-top: 2rem;
+}
+
+.experience-container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  padding-left: 4rem;
+  padding-right: 4rem;
 }
 
 .projects-container {
@@ -11,4 +38,28 @@
   width: 100%;
   padding-left: 4rem;
   padding-right: 4rem;
+  position: relative;
+  z-index: 2;
+}
+
+.projects > * {
+  position: relative;
+  z-index: 2;
+}
+
+.project-item {
+  background-color: white;
+  margin-bottom: 1rem;
+  padding: 1rem;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.projects .title {
+  padding-bottom: 4rem;
+  padding-top: 2rem;
+  font-size: 2rem;
+  font-weight: bold;
+  text-align: center;
 }
