--- a/src/components/utils/projects/ProjectContainer.css
+++ b/src/components/utils/projects/ProjectContainer.css
@@ -11,6 +11,14 @@
   justify-content: space-between;
 }
 
+.projectcontainer-container.row {
+  flex-direction: row;
+}
+
+.projectcontainer-container.row-reverse {
+  flex-direction: row-reverse;
+}
+
 .title {
   display: flex;
   flex-direction: column;
@@ -71,7 +79,7 @@
 
 @media only screen and (max-width: 1100px) {
   .projectcontainer-container {
-    flex-direction: column;
+    flex-direction: column !important;
     justify-content: center;
     gap: 0.5rem;
     width: 100%;
