--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -62,6 +62,10 @@ body {
   font-size: 1.3rem;
 }
 
+.header-container a {
+  color: white;
+}
+
 @media only screen and (max-width: 768px) {
   .header {
     width: 100%;
