--- a/src/components/utils/projects/ProjectContainer.css
+++ b/src/components/utils/projects/ProjectContainer.css
@@ -5,8 +5,8 @@
 .projectcontainer-container {
   display: flex;
   width: 100%;
-  padding-left: 8rem;
-  padding-right: 8rem;
+  padding-left: 4rem;
+  padding-right: 4rem;
   gap: 2rem;
   justify-content: space-between;
 }
@@ -24,7 +24,7 @@
   flex-direction: column;
   align-items: center;
   gap: 1rem;
-  padding-bottom: 1rem;
+  padding-bottom: 3rem;
 }
 
 .title h2 {
@@ -45,10 +45,10 @@
   width: 50%;
 }
 
-.projectcontainer-container .image p {
-  width: 100%;
-  height: 50vh;
-  /* this is temp until I get to coding the image */
+.projectcontainer-container .image img {
+  height: 25rem;
+  width: 40rem;
+  border-radius: 15px;
 }
 
 .projectcontainer-container .project-details {
@@ -77,7 +77,7 @@
   color: black;
 }
 
-@media only screen and (max-width: 1100px) {
+@media only screen and (max-width: 1200px) {
   .projectcontainer-container {
     flex-direction: column !important;
     justify-content: center;
@@ -86,6 +86,11 @@
     padding-left: 1.5rem;
     padding-right: 1.5rem;
   }
+
+  .projectcontainer-container {
+    padding-left: 1rem;
+  }
+
   .projectcontainer-container .image {
     width: 100%;
   }
@@ -93,6 +98,11 @@
   .projectcontainer-container .project-details {
     width: 100%;
     gap: 1rem;
+  }
+
+  .projectcontainer-container .image img {
+    height: 50vh;
+    width: 90vw;
   }
 
   .project-details .text {
