--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,7 +1,7 @@
 .footer {
   background-color: #000000;
   color: white;
-  height: 15rem;
+  height: 30vh;
   width: 100%;
   padding-top: 2rem;
   padding-left: 6rem;
@@ -60,6 +60,11 @@
 }
 
 @media (max-width: 768px) {
+  .footer {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+
   .footer .footer-about p {
     width: 100%;
   }
@@ -67,5 +72,9 @@
   .footer .upper-box {
     flex-direction: column;
     gap: 1rem;
+  }
+
+  .footer .lower-box p {
+    text-align: left;
   }
 }
