--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -26,6 +26,12 @@
   display: flex;
   flex-direction: row;
   gap: 1.3rem;
+  align-items: center;
+}
+
+.navbar-container .logo img {
+  height: 1.5rem;
+  width: 1.5rem;
 }
 
 .navbar-container .nav-links {
