--- a/src/components/utils/projects/ProjectContainer.css
+++ b/src/components/utils/projects/ProjectContainer.css
@@ -101,11 +101,18 @@
   }
 
   .projectcontainer-container .image img {
-    height: 30vh;
+    height: 50vh;
     width: 90vw;
   }
 
   .project-details .text {
     margin-bottom: 0.7rem;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .projectcontainer-container .image img {
+    height: 30vh;
+    width: 90vw;
   }
 }
